Directory file paths
after starting main application, navigation between pages and style sheets load properly.

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -12,9 +12,11 @@
         <div class="logo">Ecommerce Shop</div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Account</a></li>
+                <li><a href="/shop">Shop</a></li>
+                <li><a href="/checkout">Upload</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/userRegistration">Register</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
