--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/static/styles/style.css">
 
 </head>
 <body>
@@ -13,10 +13,10 @@
             <img src="images/logo.png" class="logo">
             <nav class="bold-text">
                 <ul>
-                    <li><a href="#shop">Shop</a></li>
-                    <li><a href="index.html">Upload</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="userRegistration.html">Register</a></li>
+                    <li><a href="/shop">Shop</a></li>
+                    <li><a href="/checkout">Upload</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/userRegistration">Register</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
