--- a/templates/userRegistration.html
+++ b/templates/userRegistration.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/userRegistrationStyles.css">
-    <script src="assets/floating-ui--floating-ui-react-dom-2.0.4.zip"></script>
+    <link rel="stylesheet" href="/static/styles/style.css">
+    <link rel="stylesheet" href="/static/styles/userRegistrationStyles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="images/logo.png" class="logo">
+            <img src="/static/images/logo.png" class="logo">
             <nav class="custom-navbar">
                 <ul>
-                    <li><a href="#shop">Shop</a></li>
-                    <li><a href="index.html">Upload</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="userRegistration.html">Register</a></li>
+                    <li><a href="/shop">Shop</a></li>
+                    <li><a href="/checkout">Upload</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/userRegistration">Register</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
