--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="images/logo.png" class="logo">
+            <img src="/static/images/logo.png" class="logo">
             <nav class="bold-text">
                 <ul>
                     <li><a href="/shop">Shop</a></li>
@@ -151,6 +151,6 @@
         <!-- Your footer content goes here -->
     </footer>
 
-    <script src="scripts/script.js"></script>
+    <script src="/static/scripts/script.js"></script>
 </body>
 </html>
