--- a/templates/shop.html
+++ b/templates/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Shop</title>
-    <link rel="stylesheet" href="styles/shopStyle.css">
+    <link rel="stylesheet" href="/static/styles/shopstyle.css">
 </head>
 <body>
 
@@ -25,7 +25,7 @@
         <!-- JavaScript will dynamically populate this section -->
     </main>
 
-    <script src="scripts/shopscripts.js"></script>
+    <script src="/static/scripts/shopscripts.js"></script>
 
 </body>
 </html>
