--- a/templates/userRegistration.html
+++ b/templates/userRegistration.html
@@ -28,7 +28,7 @@
 
     <h2 style="color: #f1f1f1;">Register</h2>
     
-    <form action="/register" method="post">
+    <form action="/userAuthent/newUser" method="post">
 
         <!-- Full Name -->
         <label for="fullName">Full Name:</label>
@@ -38,7 +38,7 @@
 
         <!-- Address -->
         <label for="address">Address:</label>
-        <input type="address" id="address" name="address" required>
+        <input type="address" id="address" name="fullAddress" required>
 
         <br>
 
@@ -61,8 +61,8 @@
         <br>
 
         <!-- Phone Number -->
-        <label for="phoneNumer">Phone Number:</label>
-        <input type="phoneNumber" id="phoneNumer" name="phoneNumer" required>
+        <label for="phoneNumber">Phone Number:</label>
+        <input type="phoneNumber" id="phoneNumber" name="phoneNumber" required>
 
         <br>
 
@@ -76,7 +76,7 @@
     </form>
 </div>
 
-    <script src="scripts/script.js"></script>
+    <!-- <script src="/static/scripts/script.js"></script> -->
 
 </body>
 </html>
