--- a/static/styles/shopstyle.css
+++ b/static/styles/shopstyle.css
@@ -1,37 +1,73 @@
-body {
-    font-family: Arial, sans-serif;
+*{
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    font-family: 'Roboto', sans-serif;
 }
 
-header {
+body {
+    background-image: url('../images/background.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.navbar{
+    height: 12%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+    padding-right: 5%;
+    font-size: 30px;
+    font-weight: 700;
+    /* margin-top: -10px; */
 }
 
-.logo {
-    font-size: 1.5em;
+.logo{
+    width: 210px;
+    cursor: pointer;
+    /* margin-top: 60px; */
 }
 
-nav ul {
+.custom-heading {
+    font-size: 50px;
+}
+
+
+nav{
+    flex: 1;
+    text-align: right;
+}
+
+nav ul li{
     list-style: none;
-    display: flex;
-    gap: 20px;
+    display: inline-block;
+    margin-left: 60px;
 }
 
-nav a {
+nav ul li a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
+    font-size: 13px;
+    color: #f1f1f1;
 }
 
-nav a:hover {
-    text-decoration: underline;
+h1{
+    color: #000;
+    font-size: 100px;
+    padding-bottom: 2%;
+}
+
+p{
+    color: #000;
+    font-size: 11px;
+    line-height: 20px;
+}
+
+
+.container2{
+    /* width: 100%;
+    height: 100vh; */
+    background-position: center;
+    background-size:cover;
+    color: #000;
 }
 
 main {
