--- a/templates/login.html
+++ b/templates/login.html
@@ -16,10 +16,10 @@
             <nav class="custom-navbar">
                 <ul>
                     <li><a href="/shop">Shop</a></li>
-                    <li><a href="/checkout">Upload</a></li>
+                    <li><a href="/upload">Upload</a></li>
                     <li><a href="/login">Login</a></li>
                     <li><a href="/userRegistration">Register</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
