--- a/templates/shop.html
+++ b/templates/shop.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Shop</title>
-    <link rel="stylesheet" href="/static/styles/shopstyle.css">
+    <link rel="stylesheet" href="/static/styles/shopStyle.css">
 </head>
 <body>
 
     <header>
-        <div class="logo">Ecommerce Shop</div>
-        <nav>
-            <ul>
-                <li><a href="/shop">Shop</a></li>
-                <li><a href="/checkout">Upload</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/userRegistration">Register</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="logo"></div>
+        <div class="container2">
+            <div class="navbar">
+                <img src="/static/images/logo.png" class="logo">
+                <nav class="bold-text">
+                    <ul>
+                        <li><a href="/shop">Shop</a></li>
+                        <li><a href="/upload">Upload</a></li>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/userRegistration">Register</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
     </header>
 
     <main id="productGrid">
