--- a/templates/upload.html
+++ b/templates/upload.html
@@ -19,6 +19,7 @@
                     <li><a href="/login">Login</a></li>
                     <li><a href="/userRegistration">Register</a></li>
                     <li><a href="/contact">Contact</a></li>
+                    <li><a href="/checkout">Checkout</a></li>
                 </ul>
             </nav>
         </div>
