--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,25 +25,27 @@
         </div>
 
         <div class="upload-container"> 
-            <h2 style="color: #f1f1f1;">Please contact us for questions or concerns!</h2>
+            <h2 style="color: #f1f1f1;">Please contact us for questions or concerns:</h2>
             <section> 
                 <div class="contactInformation">
                     <div>
                         <h2>Michael Lee</h2>
-                        <p>Phone: <span class="contact-info">123-456-7890</span></p>
-                        <p>Email: <a href="mailto:michael.lee@example.com" class="contact-info">michael.lee@example.com</a></p>
+                        <p>Email: <a href="mailto:mvlee@oakland.edu" class="contact-info">mvlee@oakland.edu</a></p>
                     </div>
                     
                     <div>
-                        <h2>Michael Lee</h2>
-                        <p>Phone: <span class="contact-info">987-654-3210</span></p>
-                        <p>Email: <a href="mailto:michael.lee2@example.com" class="contact-info">michael.lee2@example.com</a></p>
+                        <h2>Andersen Ball</h2>
+                        <p>Email: <a href="mailto:andersenball@oakland.edu" class="contact-info">andersenball@oakland.edu</a></p>
                     </div>
                     
                     <div>
-                        <h2>Michael Lee</h2>
-                        <p>Phone: <span class="contact-info">555-123-4567</span></p>
-                        <p>Email: <a href="mailto:michael.lee3@example.com" class="contact-info">michael.lee3@example.com</a></p>
+                        <h2>Ming Lei</h2>
+                        <p>Email: <a href="mailto:zlei@oakland.edu" class="contact-info">zlei@oakland.edu</a></p>
+                    </div>
+
+                    <div>
+                        <h2>Sreedharan Nandu</h2>
+                        <p>Email: <a href="mailto:snandu@oakland.edu" class="contact-info">snandu@oakland.edu</a></p>
                     </div>
                 </div>
             </section>
