--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -26,37 +26,38 @@
         <div class="row">
             <div class="col">
                 <h1 class="custom-heading">3D Printing</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. Posuere sollicitudin 
-                    aliquam ultrices sagittis orci a. Leo integer malesuada nunc vel risus commodo 
-                    viverra. Ultrices sagittis orci a scelerisque purus semper eget duis at.</p>
+                <p>1) Upload STL File</p>
+                <p>2) Select Print Configuration Settings</p>
+                <p>3) Checkout</p>
             </div>
         </div>
         
         <!-- Three Columns -->
         <div class="row">
             <div class="col">
-                <h2>Parts to Add</h2>
-                <p>Upload an image of the object you want 3D printed or submit a URL.</p>
-                <!-- Button with Image Upload -->
-                <button id="uploadBtn" class="btn">Upload Image</button>
-                <input type="file" id="fileInput" style="display: none;" accept="image/*">
-                <img id="previewImage" style="max-width: 100%; margin-top: 10px; display: none;">
-                <span> or </span>
-                <input type="text" id="urlInput" class="url-input" placeholder="Paste URL here">
+                <h2>Upload 3D Model</h2>
+                <p>Upload a .stl file</p>
+                <div class="upload-container">    
+                    <form onsubmit="return uploadSTL(this, event)">
+                        <!-- STL File Upload -->
+                        <input type="file" id="fileInput" name="fileInput" accept=".STL" required>
+                        <!-- Submit Button -->
+                        <button type="submit" style="margin-top: 100px;">Submit</button>
+                    </form>
+                </div>
             </div>
             <div class="col">
                 <h2>Configure & Add Parts</h2>
                 <p>Choose the technology you would prefer to be used.</p>
                 <div class="form-group">
-                    <label for="dropdown">Technology</label>
-                    <select id="dropdown">
+                    <label for="technology">Technology</label>
+                    <select id="technology">
                         <option value="option1">Fused Filament Fabrication (FFF)</option>
                         <option value="option2">Stereolithography (SLA) </option>
                     </select>
                     <br>
-                    <label for="dropdown">Infill</label>
-                    <select id="dropdown">
+                    <label for="infill">Infill</label>
+                    <select id="infill">
                         <option value="option1">100%</option>
                         <option value="option2">50%</option>
                         <option value="option3">30%</option>
@@ -67,15 +68,15 @@
                         <option value="option8">0% (Hollow Object)</option>
                     </select>
                     <br>
-                    <label for="dropdown">Layer Thickness</label>
-                    <select id="dropdown">
+                    <label for="layerThickness">Layer Thickness</label>
+                    <select id="layerThickness">
                         <option value="option1">0.1 mm</option>
                         <option value="option2">0.3 mm</option>
                         <option value="option3">>0.2 mm</option>
                     </select>
                     <br>
-                    <label for="dropdown">Material</label>
-                    <select id="dropdown">
+                    <label for="material">Material</label>
+                    <select id="material">
                         <option value="option1">PLA, Opaque, White</option>
                         <option value="option2">PLA, Opaque, Grey</option>
                         <option value="option3">PLA, Opaque, Black</option>
@@ -100,7 +101,7 @@
                     <div class="quantity-container">
                         <label for="quantity">Quantity:</label>
                         <input type="number" id="quantity" name="quantity" min="1" value="1">
-                        <button id="addToCartBtn" class="btn">Add to Cart</button>
+                        <button id="addToCartBtn" class="btn" onclick="addToCart()">Add to Cart</button>
                     </div>
                     
                 </div>
@@ -109,26 +110,25 @@
                 <h2>Review & Checkout</h2>
                 <p>Review carefully before checking out.</p>
                 <!-- Inside your HTML, possibly within a form or another container -->
-                <!-- Inside your HTML, possibly within a form or another container -->
                 <div class="checkout-container">
                     <div class="checkout-row">
                         <label for="item1">Subtotal</label>
-                        <input type="text" id="item1" name="item1"  readonly value="$0.00">
+                        <input type="text" id="subtotal" name="item1"  readonly value="TBD">
                     </div>
 
                     <div class="checkout-row">
                         <label for="item2">Printing Setup:</label>
-                        <input type="text" id="item2" name="item2"  readonly value="$0.00">
+                        <input type="text" id="printingsetupCost" name="item2"  readonly value="$5.00">
                     </div>
 
                     <div class="checkout-row">
                         <label for="item3">Shipping</label>
-                        <input type="text" id="item3" name="item3"  readonly value="$0.00">
+                        <input type="text" id="shippingCost" name="item3"  readonly value="$10.00">
                     </div>
 
                     <div class="checkout-row total-row">
                         <label for="total">Total:</label>
-                        <input type="text" id="total" name="total" readonly value="$0.00">
+                        <input type="text" id="total" name="total" readonly value="$15.00">
                     </div>
 
                     <div class="checkout-button">
@@ -153,5 +153,6 @@
     </footer>
 
     <script src="/static/scripts/script.js"></script>
+
 </body>
 </html>
